<resources>
    <string name="app_name">ViewFlipperExample</string>

    <string name="tutorial">Hello world!</string>
    <string name="prev">Previous</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="next">Next</string>
    <string name="header_text">ViewFlipper inside ScrollView</string>
    <string name="content_text">This is an example to separate touch events when we have a ViewFlipper inside a ScrollView.</string>
    <string name="interval">Enter interval in seconds</string>
    <string name="url">marcosnavarro.net</string>
    <string name="action_settings">Settings</string>
</resources>
